tests/sksl/errors/ArraySplitDimensionsInStruct.glsl

struct S {
    float x[2];
};
